# etrobocon2024

./: .bashrc  .gitignore  CMakeLists.txt  ClassDiagram.pu  Dockerfile  Makefile  README.md  app.cfg  app.cpp
datafiles/: AreaMasterLeft.csv  AreaMasterRight.csv  DebrisRemovalLeft.csv  DebrisRemovalOverLeft.csv  DebrisRemovalOverRight.csv  DebrisRemovalRight.csv  DebrisRemovalSpecialLeft.csv  DebrisRemovalSpecialRight.csv  DebrisRemovalUnderLeft.csv  DebrisRemovalUnderRight.csv  DebrisToCarryLeft.csv  DebrisToCarryRight.csv  DebrisToGoalLeft.csv  DebrisToGoalRight.csv  DoubleLoopLeft.csv  DoubleLoopLeft1.csv  DoubleLoopRight.csv  DoubleToGoalLeft.csv  LineTraceLeft.csv  LineTraceLeft1.csv  LineTraceRight.csv  Recovery.csv  SmartCarryLeft.csv  SmartCarryRight.csv
front_camera/: .bashrc  Makefile  README.md  history_commnad_0811.txt  pyproject.toml
front_camera/detect/: .bashrc  new_requirements.txt  pyproject.toml  requirements.txt
front_camera/front_camera/: __init__.py  __main__.py  backup_frame_timing_calculator.py  bakcup_frame_timing_calculator.py  camera_interface.py  capture_image.py  capture_plarail_image.py  color_rectangle_detector.py  frame_timing_calculator.py  get_correction_angle.py  get_plarail_image.py  video_recorder.py  yellow_rectangle_detecter.py  yellow_rectangle_detector.py
front_camera/tests/: __init__.py
module/: AreaMaster.cpp  AreaMaster.h  Calibrator.cpp  Calibrator.h  EtRobocon2024.cpp  EtRobocon2024.h  MotionParser.cpp  MotionParser.h  test.cpp  test.h
scripts/: double_loop_left_merger.sh  double_loop_right_merger.sh  organize_logfile.sh
test/: AreaMasterTest.cpp  AreaMaterTest.cpp  CalibratorTest.cpp  ColorDistanceLineTracingTest.cpp  ColorJudgeTest .cpp  ColorLineTracingTest.cpp  ColorStraightTest.cpp  ColorstraightTest.cpp  ControllerTest.cpp  DistanceLineTracingTest.cpp  DummyRobot.h  (+17 more)
(+110 files in other folders)
