[tool.poetry]
name = "front_camera"
version = "0.1.0"
description = ""
authors = ["bizyutyu <bizyuness.takakura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.10.0.84"
picamera2 = "^0.3.18"
jinja2 = "^3.1.4"
ply = "^3.11"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
